# napari-mcp

./: .bandit  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCS_SETUP.md  INSTALLATION.md  LICENSE  LLM_INTEGRATIONS.md  MANIFEST.in  Makefile  QUICKSTART.md  README.md  SECURITY.md  codecov.yml  example_bridge_usage.py  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  run_gui_test.py  run_realgui_tests.sh  run_tests.sh  test_bridge.py  tox.ini
.github/workflows/: claude-code-review.yml  docs.yml  release.yml  test-optimized.yml  test-realgui.yml  test.yml  test_and_deploy.yml
.napari-hub/: config.yml
docs/: CI_CD_IMPROVEMENTS.md  CI_CONSOLIDATION.md  index.md
docs/examples/: README.md  anthropic_integration.py  direct_mcp_client.py  openai_integration.py
docs/getting-started/: index.md  installation.md  quickstart.md  zero-install.md
docs/guides/: index.md  napari-plugin.md  troubleshooting.md
docs/integrations/: chatgpt.md  claude-code.md  claude-desktop.md  cline.md  cursor.md  index.md  other-llms.md  python.md
docs/scripts/: gen_ref_pages.py
docs/stylesheets/: extra.css
napari-mcp-bridge/: README.md  pyproject.toml
napari-mcp-bridge/src/napari_mcp_bridge/: __init__.py  napari.yaml  server.py  widget.py
scripts/: DEPLOYMENT.md  README.md  analyze_test_performance.py  deploy_docs.sh  deploy_docs_safe.sh  install.sh  organize_tests.py  run.bat  run.sh  run_from_github.sh  uv_install.py
src/: napari.yaml  napari_mcp_base.py  napari_mcp_server.py
src/napari_mcp/: __init__.py  _helpers.py  base.py  bridge_server.py  napari.yaml  output.py  qt_helpers.py  server.py  state.py  viewer_protocol.py  widget.py
src/napari_mcp/cli/: __init__.py  main.py
src/napari_mcp/cli/install/: __init__.py  base.py  claude_code.py  claude_desktop.py  cline_cursor.py  cline_vscode.py  codex_cli.py  cursor.py  gemini_cli.py  utils.py
tests/: TEST_ISOLATION_IMPROVEMENTS.md  __init__.py  conftest.py  pytest.ini  test_auto_detection.py  test_base_installer.py  test_bridge_server.py  test_bridge_simplified.py  test_cli_installer.py  test_cli_utils.py  test_coverage.py  test_edge_cases.py  test_external_viewer.py  test_helpers.py  test_installers.py  test_integration.py  test_isolation_verification.py  test_napari_mcp_base.py  test_napari_server_coverage.py  test_output_storage.py  test_performance.py  test_property_based.py  test_qt_helpers.py  test_real_integration.py  test_server_tools.py  test_state.py  test_timelapse.py  test_tools.py  test_tools_real.py  test_widget.py
tests/fixtures/: __init__.py  async_utils.py  mocks.py
tests/test_cli_installers/: test_platform_installers.py
